fixed some spacing issues

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -42,6 +42,6 @@
 
 @media (min-width: 1199px) {
   .port-item {
-    padding: 3em !important;
+    padding: 1em !important;
   }
 }
